# PersianAIAssistantOnline

./: .codemagic.yaml  .gitignore  .gitlab-ci.yml  0_build.txt  6_Build Debug APK.txt  AI_FIRST_ARCHITECTURE.md  API_KEYS_GUIDE.md  API_KEYS_SETUP.md  ARCHITECTURE.md  AUTO_PROVISIONING_GUIDE.md  BACKGROUND_ALARM_FIX.md  BUG_FIXES_SUMMARY.md  BUILD_FIXES_SUMMARY.md  BUILD_FIX_REPORT.md  BUILD_FIX_SUMMARY.md  BUILD_GUIDE.md  BUILD_LOGS.md  CHANGED_FILES_LIST.md  CHANGELOG.md  CHANGES_AND_GUIDE.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY_COMPLETE.md  CODEMAGIC_SETUP.md  COMPLETE_ARCHITECTURE.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEEDED_FIXES.md  DOCUMENTATION_INDEX.md  Dockerfile.android  FEATURE_STATUS_CHECK.md  FILE_MAP.md  FINAL_COMPLETION_REPORT.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_GITHUB_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REPORT.md  FINAL_STATUS.md  FINAL_STEPS.md  FINAL_SUMMARY.md  FINAL_UPDATE.md  FIXES.md  (+85 more)
.github/workflows/: android-build-v2.yml  android-build.yml  android-build.yml.disabled  build-simple.yml  build.yml  restore-version-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: neshan.license  neshan_map.html  puter_bridge.html
app/src/main/assets/tts/: model_info.txt
app/src/main/cpp/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper_stub.cpp
app/src/main/res/anim/: fade_out.xml  scale_up.xml  slide_in_right.xml  slide_out_left.xml
app/src/main/res/drawable/: circle_today.xml  (+38 more)
gradle/wrapper/: gradle-wrapper.properties
scripts/: fetch_prebuilt_libs.ps1  fetch_prebuilt_libs.sh
(+378 files in other folders)
